[project]
name = "xo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Binh Phan", email = "ptbinh2003@gmail.com" }
]
dependencies = [
    "pygame>=2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
